welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: type i
    if (tab[i]==lookingFor) {
            ^indexOfValue:3: error: value tab of type Array[Int] does not take type parameters.
    if (tab[i]==lookingFor) {
           ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 0 to tab.length-1) {
         ^